<resources>
    <string name="app_name">Tarot GCM  client</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile number</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="warning1">If you do not have an account, press the button below.</string>
    <string name="next">Next</string>
    <string name="next1">Next >></string>
    <string name="name">Name</string>
    <string name="postcode">Postal code</string>
    <string name="invalid_warning_all">Phone number or password is wrong!</string>
    <string name="forgot_my_password">I forgot my password</string>
    <string name="no_account">Still no account?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="create_account_small">Create account</string>
    <string name="full_name">Full name</string>
    <string name="terms">On click, you accept our terms and conditions.</string>
    <string name="have_account">If you have account already,press on lower button</string>
    <string name="network_alert">Network Alert</string>
    <string name="network_problem">Problem with network. Please wait a minute and try again.</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="error_heading">CONNECTION ERROR</string>
    <string name="connection_error">Sorry, it appears you are offline.  Please connect to the internet to proceed.</string>
</resources>
